# mlp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  create_kanban.sh  main.c
.github/ISSUE_TEMPLATE/: project_issue.md
.github/workflows/: ci.yml
cmake/: mlpConfig.cmake.in  test_package_consumer.cmake  version.hpp.in
docs/: API_POLICY.md  EXPERIMENTS.md  TUTORIAL.md
examples/: io_roundtrip.cpp  library_usage.cpp
include/: activations.hpp  cuda_ops.hpp  dense.hpp  layer.hpp  loss.hpp  matrix.hpp  metrics.hpp  model.hpp  optimizer.hpp
include/mlp/: io.hpp  library.hpp  metrics.hpp  types.hpp
scripts/: pre_push_check.sh
src/: activations.cpp  cuda_ops.cu  dense.cpp  io.cpp  library.cpp  loss.cpp  main.cpp  metrics.cpp  model.cpp  optimizer.cpp
tests/: test_experiment.cpp  test_io_roundtrip.cpp
